src/test/deca/context/invalid/rvalue_assign_class_to_int_inclass.deca
// Test la règle 3.28: 

class A  {
    
}

class B {
    A a = new A();
    int x = a;
}



// Resultat:
//TODOTEST
